RESOLVED FIXED283948
Crash when ResponsivenessTimer fires
https://bugs.webkit.org/show_bug.cgi?id=283948
Summary Crash when ResponsivenessTimer fires
Chris Dumez
Reported 2024-12-02 15:40:28 PST
Crash when ResponsivenessTimer fires: ``` ==> 3 WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ResponsivenessTimer>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop>>&&, WebKit::ResponsivenessTimer*, void (WebKit::ResponsivenessTimer::*)())::'lambda'(), void>::call() (WebKit) <== 3 WTF::Function<void ()>::operator()() const (WebKit) 3 WTF::RunLoop::Timer::fired() (WebKit) 3 WTF::RunLoop::TimerBase::start(WTF::Seconds, bool)::$_0::__invoke(__CFRunLoopTimer*, void*) (JavaScriptCore) 3 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ (CoreFoundation) ```
Attachments
Chris Dumez
Comment 1 2024-12-02 15:40:36 PST
Chris Dumez
Comment 2 2024-12-02 15:48:15 PST
EWS
Comment 3 2024-12-03 12:23:00 PST
Committed 287301@main (c5617f4184ab): <https://commits.webkit.org/287301@main> Reviewed commits have been landed. Closing PR #37348 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.