Source/WebKit/UIProcess/ResponsivenessTimer.h
@@ -27,15 +27,14 @@
 #define ResponsivenessTimer_h
 
 #include <wtf/AbstractRefCountedAndCanMakeWeakPtr.h>
-#include <wtf/CheckedPtr.h>
+#include <wtf/RefCounted.h>
 #include <wtf/RunLoop.h>
 #include <wtf/WeakRef.h>
 
 namespace WebKit {
 
-class ResponsivenessTimer : public CanMakeCheckedPtr<ResponsivenessTimer> {
+class ResponsivenessTimer : public RefCounted<ResponsivenessTimer> {
     WTF_MAKE_FAST_ALLOCATED;
-    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(ResponsivenessTimer);
 public:
     class Client : public AbstractRefCountedAndCanMakeWeakPtr<Client> {
     public:
@@ -50,7 +49,7 @@ public:
     };
 
     static constexpr Seconds defaultResponsivenessTimeout = 3_s;
-    ResponsivenessTimer(ResponsivenessTimer::Client&, Seconds responsivenessTimeout);
+    static Ref<ResponsivenessTimer> create(ResponsivenessTimer::Client&, Seconds responsivenessTimeout);
     ~ResponsivenessTimer();
 
     void start();
@@ -78,13 +77,13 @@ public:
     void processTerminated();
 
 private:
-    Ref<Client> protectedClient() const;
+    ResponsivenessTimer(ResponsivenessTimer::Client&, Seconds responsivenessTimeout);
 
     void timerFired();
 
     bool mayBecomeUnresponsive() const;
 
-    WeakRef<ResponsivenessTimer::Client> m_client;
+    WeakPtr<ResponsivenessTimer::Client> m_client;
 
     RunLoop::Timer m_timer;
     MonotonicTime m_restartFireTime;
